[package]
name = "site-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"